[project]
name = "habit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Offei", email = "poffei.cs@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
habit-tracker = "habit_tracker:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"
