[project]
name = "habit-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Offei", email = "poffei.cs@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.7",
]

[project.scripts]
habit-tracker = "habit_tracker:main"

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "typing-extensions>=4.15.0",
]
